--- a/AdoptApp/src/main/resources/messages_es.properties
+++ b/AdoptApp/src/main/resources/messages_es.properties
@@ -1,3 +1,4 @@
 project.exceptions.DuplicatedUserException=El usuario indicado ya esta en uso
 project.exceptions.IncorrectLoginException=El usuario o contraseña son incorrectos
 project.exceptions.ForbiddenException=Permiso Denegado
+project.exceptions.BadRequestException=Petición Incorrecta
